--- a/styless/global.css
+++ b/styless/global.css
@@ -12,9 +12,17 @@
     --shape-transparency: #ffffff8c;
     --text-color-primary: #313131;
     --text-color-secondary: #6C6C6C;
+
+    --font-family: "Poppins", sans-serif;
+    --text-large: bold 32px/125% var(--font-family) ;
+    --text: 16px/1.5 var(--font-family);/*24px dividido 16px = 1.5 ou 150%*/
+    --text-medium: 14px/170% var(--font-family) ;
+    --text-small: 12px/170% var(--font-family) ;
 }
 
 body {
+    font: var(--text);
     color: var(--text-color-secondary);
     background-color: var(--background-color);
 }
+
